removed files for test

--- a/FolderBrowser/src/main/AndroidManifest.xml
+++ b/FolderBrowser/src/main/AndroidManifest.xml
@@ -2,10 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.alvessss.folderbrowser">
 
-    <application>
-        <activity
-            android:name=".TestActivity"
-            android:exported="true" />
-    </application>
+    <application></application>
 
 </manifest>
